# tinker02

./: CMakeLists.txt  README.md  autobuild.sh
.github/workflows/: cmake.yml
include/: 6502.hpp  header.hpp
lib/: 6502.cpp
lib/mos6502/: LICENSE.txt  mos6502.cpp  mos6502.h
make test/: Makefile
src/: Makefile  main.cpp
src/compiler/: compiler.cpp  compiler.h
